src/assets/styles/doc-styles.scss
/* ... */
.img-plugin-diagram {
  width: calc(100vw - 33rem);
  margin-left: calc((100vw - 30rem - 80ch) / -2);
  max-width: unset !important;
  transition: filter 0.2s ease-in-out;

  @media (max-width: 1280px) {
    width: calc(100vw - 19rem);
    margin-left: calc((100vw - 16rem - 80ch) / -2);
  }

  @media (max-width: 1024px) {
    width: calc(100vw - 3rem);
    margin-left: calc((100vw - 80ch) / -2);
  }

  @media (max-width: 760px) {
    width: 100%;
    margin-left: 0;
  }

  html.dark & {
    filter: invert(1) hue-rotate(180deg);
  }
}

#color-scheme-toggle {
  appearance: none;
  margin: 0;
  padding: 0;
  background: none;
  border: 0;

  & > svg {
    .small-circle {
      fill: black; /* work around SVGO bug */
      transform-origin: 70px 40px;
    }

    .sun-rays {
      transform-origin: 50px 50px;
    }

    & circle {
      transition: transform 0.2s ease-in-out;
    }

    & .big-circle {
      transform-origin: center;
    }

    & .sun-rays {
      transform: scale(0);
    }

    .dark & .big-circle {
      transform: scale(0.75);
    }

    .dark & .small-circle {
      transform: translate(-20px, 10px);
      transform: scale(0);
    }

    .dark & .sun-rays {
      transform: scale(1);
    }
  }
}

.visually-hidden {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  white-space: nowrap;
  width: 1px;
}

.header-anchor {
  position: absolute;
  transform: translate(-99%, -100%);
  box-sizing: border-box;
  @apply pr-2 opacity-0 transition;
}

.header-anchor:hover,
:hover + .header-anchor {
  @apply opacity-100;
}

.parcel-docs-header {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1;

  display: grid;
  grid-template-areas: "logo picker . search social";
  grid-template-columns: auto auto 1fr auto auto;
  align-items: center;
  box-sizing: border-box;

  @apply bg-blueGray-700;
  @include transition-background-color;

  padding: 1rem;
  color: #e7dacb;
  width: 100%;

  .left {
    grid-area: logo;
    display: flex;
    .hamburger-button {
      @apply w-6 h-6 mr-4 flex-shrink-0 lg:hidden;
    }

    .logo {
      @apply hidden xs:flex sm:mr-16;
      align-items: center;
      height: 30px;
      flex-shrink: 0;

      .parcel-text {
        width: 120px;
        @apply hidden sm:block;
      }

      .parcel {
        margin-right: 10px;
      }
    }
  }

  .section-picker {
    grid-area: picker;
    display: flex;
    justify-content: center;
    position: absolute;

    @apply text-base rounded-full bg-blueGray-800 transition p-1;

    a {
      display: block;

      @apply transition text-blueGray-400 hover:text-blueGray-200 rounded-full px-2 xs:px-3 sm:px-5 py-1;
      &.selected {
        @apply bg-sky-900 text-gray-100;
      }
    }
  }

  .social-links {
    grid-area: social;
    display: flex;
    justify-content: flex-end;
    padding-left: 1rem;
    white-space: nowrap;

    button, a {
      color: inherit;
      @apply transition-colors;

      &:hover {
        color: lighten(#e7dacb, 10%);
      }
    }

    svg {
      fill: currentColor;
      width: 1.5rem;
      height: 1.5rem;
    }
  }

  &.search {
    .section-picker {
      @apply opacity-0 sm:opacity-100;
    }
  }

  #color-scheme-toggle {
    height: 100%;
    margin-left: 1em;
    cursor: pointer;
  }

  @media print {
    display: none;
  }
}

.docs-navigation {
  position: fixed;
  top: 0;
  bottom: 0;

  @apply w-64 px-3 py-8 right-full lg:right-auto lg:left-0 bg-white dark:bg-gray-800 lg:top-20;
  @include transition-colors;

  white-space: nowrap;
  overflow-y: auto;
  outline: none;

  @media (max-width: 1024px) {
    visibility: hidden;
    z-index: 100;
    .loaded & {
      transition: transform 200ms, visibility 0s 200ms;
    }

    &.visible {
      transform: translateX(100%);
      transition-delay: 0ms;
      visibility: unset;
    }

    &.visible ~ main:after {
      opacity: 1;
      pointer-events: all;
    }
  }

  h3 {
    @apply text-xs font-medium uppercase pb-1 px-4 text-gray-700 dark:text-gray-300;
    @include transition-colors;
  }

  @media print {
    display: none;
  }

  .current > a {
    @apply bg-sky-500 bg-opacity-20 hover:bg-opacity-30 dark:bg-sky-900 dark:bg-opacity-75 dark:hover:bg-opacity-70 text-gray-900 dark:text-gray-50;
  }

  a {
    @apply text-gray-600 hover:text-gray-900 hover:bg-sky-500 hover:bg-opacity-10 dark:text-gray-300 dark:hover:text-gray-100 dark:hover:bg-sky-900 dark:hover:bg-opacity-30 transition-colors rounded-md px-4 py-1 block;
    @media (min-width: 768px) {
      font-size: .95rem;
    }
  }

  & > ul > li {
    @apply mb-10;

    &:last-child {
      @apply mb-0;
    }

    & li {
      @apply my-1;
    }
  }

  .blog & > ul > li {
    @apply my-1;
  }

  & a img {
    height: 1em;
    width: 1em;
    vertical-align: middle;
    display: inline-block;
    margin-right: 0.25em;
  }
}
/* ... */

